Fixed minor issue with darkmode scrollbar

--- a/app/components/ScenariosManager/ScenariosManager.module.scss
+++ b/app/components/ScenariosManager/ScenariosManager.module.scss
@@ -6,7 +6,7 @@
   margin: auto;
   padding: 0 0.5rem 2rem 0.5rem;
   box-sizing: border-box;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 
